Modernize the test sources for Java 17
Read every test source and applied the same modernization as the main
sources: local type inference with var, List.of()/Set.of()/Stream.toList()
where the value stays internal, String.repeat(), try-with-resources with
var, StandardCharsets in place of encoding names, and removal of imports
orphaned by those changes.

Anonymous inner classes that the tests themselves assert on are kept as
anonymous classes rather than being turned into lambdas.

Also fixes a broken javadoc link in ClassfileReader, updates the stale JDK
version claims in README.md, and corrects the matrix job count in the CI
workflow comment.