@@ -39,7 +39,6 @@ import java.nio.ByteBuffer;
 import java.nio.file.Path;
 import java.nio.file.attribute.PosixFilePermission;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map.Entry;
@@ -55,7 +54,6 @@ import nonapi.io.github.classgraph.concurrency.WorkQueue;
 import nonapi.io.github.classgraph.fastzipfilereader.FastZipEntry;
 import nonapi.io.github.classgraph.fastzipfilereader.LogicalZipFile;
 import nonapi.io.github.classgraph.fastzipfilereader.NestedJarHandler;
-import nonapi.io.github.classgraph.fastzipfilereader.ZipFileSlice;
 import nonapi.io.github.classgraph.fileslice.reader.ClassfileReader;
 import nonapi.io.github.classgraph.scanspec.ScanSpec;
 import nonapi.io.github.classgraph.scanspec.ScanSpec.ScanSpecPathMatch;
@@ -68,23 +66,31 @@ import nonapi.io.github.classgraph.utils.URLPathEncoder;
 /** A zip/jarfile classpath element. */
 class ClasspathElementZip extends ClasspathElement {
     /**
-     * The {@link String} representation of the path string, {@link URL}, {@link URI}, or {@link Path} for this
-     * zipfile.
+     * The {@link String} representation of the path string, {@link URL},
+     * {@link URI}, or {@link Path} for this zipfile.
      */
     private final String rawPath;
     /** The logical zipfile for this classpath element. */
     LogicalZipFile logicalZipFile;
-    /** The normalized path of the jarfile, "!/"-separated if nested, excluding any package root. */
+    /**
+     * The normalized path of the jarfile, "!/"-separated if nested, excluding any
+     * package root.
+     */
     private String zipFilePath;
-    /** A map from relative path to {@link Resource} for non-rejected zip entries. */
+    /**
+     * A map from relative path to {@link Resource} for non-rejected zip entries.
+     */
     private final ConcurrentHashMap<String, Resource> relativePathToResource = new ConcurrentHashMap<>();
-    /** A list of all automatic package root prefixes found as prefixes of paths within this zipfile. */
+    /**
+     * A list of all automatic package root prefixes found as prefixes of paths
+     * within this zipfile.
+     */
     private final Set<String> strippedAutomaticPackageRootPrefixes = new HashSet<>();
     /** The nested jar handler. */
     private final NestedJarHandler nestedJarHandler;
     /**
-     * The name of the module from the {@code Automatic-Module-Name} manifest attribute, if one is present in the
-     * root of the classpath element.
+     * The name of the module from the {@code Automatic-Module-Name} manifest
+     * attribute, if one is present in the root of the classpath element.
      */
     String moduleNameFromManifestFile;
     /** The automatic module name, derived from the jarfile filename. */
@@ -93,25 +99,23 @@ class ClasspathElementZip extends ClasspathElement {
     /**
      * A jarfile classpath element.
      *
-     * @param workUnit
-     *            the work unit
-     * @param nestedJarHandler
-     *            the nested jar handler
-     * @param scanSpec
-     *            the scan spec
+     * @param workUnit         the work unit
+     * @param nestedJarHandler the nested jar handler
+     * @param scanSpec         the scan spec
      */
     ClasspathElementZip(final ClasspathEntryWorkUnit workUnit, final NestedJarHandler nestedJarHandler,
             final ScanSpec scanSpec) {
         super(workUnit, scanSpec);
-        final Object rawPathObj = workUnit.classpathEntryObj;
+        final var rawPathObj = workUnit.classpathEntryObj;
 
         // Convert the raw path object (Path, URL, or URI) to a string.
         // Any required URL/URI parsing are done in NestedJarHandler.
         String rawPath = null;
-        if (rawPathObj instanceof Path) {
-            // Path.toString does not include URI scheme => turn into a URI so that toString works
+        if (rawPathObj instanceof final Path path) {
+            // Path.toString does not include URI scheme => turn into a URI so that toString
+            // works
             try {
-                rawPath = ((Path) rawPathObj).toUri().toString();
+                rawPath = path.toUri().toString();
             } catch (final IOError | SecurityException e) {
                 // Fall through
             }
@@ -124,23 +128,25 @@ class ClasspathElementZip extends ClasspathElement {
         this.nestedJarHandler = nestedJarHandler;
     }
 
-    /* (non-Javadoc)
+    /*
+     * (non-Javadoc)
+     *
      * @see io.github.classgraph.ClasspathElement#open(
-     * nonapi.io.github.classgraph.concurrency.WorkQueue, nonapi.io.github.classgraph.utils.LogNode)
+     * nonapi.io.github.classgraph.concurrency.WorkQueue,
+     * nonapi.io.github.classgraph.utils.LogNode)
      */
     @Override
     void open(final WorkQueue<ClasspathEntryWorkUnit> workQueue, final LogNode log) throws InterruptedException {
         if (!scanSpec.scanJars) {
             if (log != null) {
-                log(classpathElementIdx, "Skipping classpath element, since jar scanning is disabled: " + rawPath,
-                        log);
+                log(classpathElementIdx, "Skipping classpath element, since jar scanning is disabled: " + rawPath, log);
             }
             skipClasspathElement = true;
             return;
         }
-        final LogNode subLog = log == null ? null : log(classpathElementIdx, "Opening jar: " + rawPath, log);
-        final int plingIdx = JarUtils.indexOfNestedJarSeparator(rawPath);
-        final String outermostZipFilePathResolved = FastPathResolver.resolve(FileUtils.currDirPath(),
+        final var subLog = log == null ? null : log(classpathElementIdx, "Opening jar: " + rawPath, log);
+        final var plingIdx = JarUtils.indexOfNestedJarSeparator(rawPath);
+        final var outermostZipFilePathResolved = FastPathResolver.resolve(FileUtils.currDirPath(),
                 plingIdx < 0 ? rawPath : rawPath.substring(0, plingIdx));
         if (!scanSpec.jarAcceptReject.isAcceptedAndNotRejected(outermostZipFilePathResolved)) {
             if (subLog != null) {
@@ -152,15 +158,16 @@ class ClasspathElementZip extends ClasspathElement {
 
         try {
             // Get LogicalZipFile for innermost nested jarfile
-            Entry<LogicalZipFile, String> logicalZipFileAndPackageRoot;
+            final Entry<LogicalZipFile, String> logicalZipFileAndPackageRoot;
             try {
-                logicalZipFileAndPackageRoot = nestedJarHandler.nestedPathToLogicalZipFileAndPackageRootMap
-                        .get(rawPath, subLog);
+                logicalZipFileAndPackageRoot = nestedJarHandler.nestedPathToLogicalZipFileAndPackageRootMap.get(rawPath,
+                        subLog);
             } catch (final NullSingletonException | NewInstanceException e) {
-                // Generally thrown on the second and subsequent attempt to call .get(), after the first failed,
+                // Generally thrown on the second and subsequent attempt to call .get(), after
+                // the first failed,
                 // or newInstance() threw an exception
-                throw new IOException("Could not get logical zipfile " + rawPath + " : "
-                        + (e.getCause() == null ? e : e.getCause()));
+                throw new IOException(
+                        "Could not get logical zipfile " + rawPath + " : " + (e.getCause() == null ? e : e.getCause()));
             }
             logicalZipFile = logicalZipFileAndPackageRoot.getKey();
             if (logicalZipFile == null) {
@@ -172,7 +179,7 @@ class ClasspathElementZip extends ClasspathElement {
             zipFilePath = FastPathResolver.resolve(FileUtils.currDirPath(), logicalZipFile.getPath());
 
             // Get package root of jarfile
-            final String packageRoot = logicalZipFileAndPackageRoot.getValue();
+            final var packageRoot = logicalZipFileAndPackageRoot.getValue();
             if (!packageRoot.isEmpty()) {
                 packageRootPrefix = packageRoot + "/";
             }
@@ -185,8 +192,10 @@ class ClasspathElementZip extends ClasspathElement {
         }
 
         if (!scanSpec.enableSystemJarsAndModules && logicalZipFile.isJREJar) {
-            // Found a rejected JRE jar that was not caught by filtering for rt.jar in ClasspathFinder
-            // (the isJREJar value was set by detecting JRE headers in the jar's manifest file)
+            // Found a rejected JRE jar that was not caught by filtering for rt.jar in
+            // ClasspathFinder
+            // (the isJREJar value was set by detecting JRE headers in the jar's manifest
+            // file)
             if (subLog != null) {
                 subLog.log("Ignoring JRE jar: " + rawPath);
             }
@@ -202,21 +211,25 @@ class ClasspathElementZip extends ClasspathElement {
             return;
         }
 
-        // Automatically add any nested "lib/" dirs to classpath, since not all classloaders return them
+        // Automatically add any nested "lib/" dirs to classpath, since not all
+        // classloaders return them
         // as classpath elements
-        int childClasspathEntryIdx = 0;
+        var childClasspathEntryIdx = 0;
         if (scanSpec.scanNestedJars) {
             for (final FastZipEntry zipEntry : logicalZipFile.entries) {
                 for (final String libDirPrefix : ClassLoaderHandlerRegistry.AUTOMATIC_LIB_DIR_PREFIXES) {
-                    // Even if a package root is given, e.g. BOOT-INF/classes, still look in lib/ etc. for jars
+                    // Even if a package root is given, e.g. BOOT-INF/classes, still look in lib/
+                    // etc. for jars
                     if (zipEntry.entryNameUnversioned.startsWith(libDirPrefix)
                             && zipEntry.entryNameUnversioned.endsWith(".jar")) {
-                        final String entryPath = zipEntry.getPath();
+                        final var entryPath = zipEntry.getPath();
                         if (subLog != null) {
                             subLog.log("Found nested lib jar: " + entryPath);
                         }
-                        workQueue.addWorkUnit(new ClasspathEntryWorkUnit(entryPath, getClassLoader(),
-                                /* parentClasspathElement = */ this,
+                        workQueue.addWorkUnit(new ClasspathEntryWorkUnit(entryPath, getClassLoader(), /*
+                                                                                                       * parentClasspathElement
+                                                                                                       * =
+                                                                                                       */ this,
                                 /* orderWithinParentClasspathElement = */
                                 childClasspathEntryIdx++, /* packageRootPrefix = */ "", packageRootPrefixes));
                         break;
@@ -225,69 +238,81 @@ class ClasspathElementZip extends ClasspathElement {
             }
         }
 
-        // Don't add child classpath elements that are identical to this classpath element, or that are duplicates
+        // Don't add child classpath elements that are identical to this classpath
+        // element, or that are duplicates
         final Set<String> scheduledChildClasspathElements = new HashSet<>();
         scheduledChildClasspathElements.add(rawPath);
 
-        // Create child classpath elements from values obtained from Class-Path entry in manifest, resolving
-        // the paths relative to the dir or parent jarfile that the jarfile is contained in
+        // Create child classpath elements from values obtained from Class-Path entry in
+        // manifest, resolving
+        // the paths relative to the dir or parent jarfile that the jarfile is contained
+        // in
         if (logicalZipFile.classPathManifestEntryValue != null) {
             // Get parent dir of logical zipfile within grandparent slice,
-            // e.g. for a zipfile slice path of "/path/to/jar1.jar!/lib/jar2.jar", this is "lib",
-            // or for "/path/to/jar1.jar", this is "/path/to", or "" if the jar is in the toplevel dir.
-            final String jarParentDir = FileUtils
-                    .getParentDirPath(logicalZipFile.getPathWithinParentZipFileSlice());
-            // Add paths in manifest file's "Class-Path" entry to the classpath, resolving paths relative to
+            // e.g. for a zipfile slice path of "/path/to/jar1.jar!/lib/jar2.jar", this is
+            // "lib",
+            // or for "/path/to/jar1.jar", this is "/path/to", or "" if the jar is in the
+            // toplevel dir.
+            final var jarParentDir = FileUtils.getParentDirPath(logicalZipFile.getPathWithinParentZipFileSlice());
+            // Add paths in manifest file's "Class-Path" entry to the classpath, resolving
+            // paths relative to
             // the parent directory or jar
-            for (final String childClassPathEltPathRelative : logicalZipFile.classPathManifestEntryValue
-                    .split(" ")) {
+            for (final String childClassPathEltPathRelative : logicalZipFile.classPathManifestEntryValue.split(" ")) {
                 if (!childClassPathEltPathRelative.isEmpty()) {
                     // Resolve Class-Path entry relative to containing dir
-                    final String childClassPathEltPath = FastPathResolver.resolve(jarParentDir,
+                    final var childClassPathEltPath = FastPathResolver.resolve(jarParentDir,
                             childClassPathEltPathRelative);
                     // If this is a nested jar, prepend outer jar prefix
-                    final ZipFileSlice parentZipFileSlice = logicalZipFile.getParentZipFileSlice();
-                    final String childClassPathEltPathWithPrefix = parentZipFileSlice == null
-                            ? childClassPathEltPath
+                    final var parentZipFileSlice = logicalZipFile.getParentZipFileSlice();
+                    final var childClassPathEltPathWithPrefix = parentZipFileSlice == null ? childClassPathEltPath
                             : parentZipFileSlice.getPath() + (childClassPathEltPath.startsWith("/") ? "!" : "!/")
                                     + childClassPathEltPath;
                     // Only add child classpath elements once
                     if (scheduledChildClasspathElements.add(childClassPathEltPathWithPrefix)) {
                         // Schedule child classpath element for scanning
                         workQueue.addWorkUnit( //
-                                new ClasspathEntryWorkUnit(childClassPathEltPathWithPrefix, getClassLoader(),
-                                        /* parentClasspathElement = */ this,
+                                new ClasspathEntryWorkUnit(childClassPathEltPathWithPrefix, getClassLoader(), /*
+                                                                                                               * parentClasspathElement
+                                                                                                               * =
+                                                                                                               */ this,
                                         /* orderWithinParentClasspathElement = */
                                         childClasspathEntryIdx++, /* packageRootPrefix = */ "", packageRootPrefixes));
                     }
                 }
             }
         }
-        // Add paths in an OSGi bundle jar manifest's "Bundle-ClassPath" entry to the classpath, resolving
+        // Add paths in an OSGi bundle jar manifest's "Bundle-ClassPath" entry to the
+        // classpath, resolving
         // the paths relative to the root of the jarfile
         if (logicalZipFile.bundleClassPathManifestEntryValue != null) {
-            final String zipFilePathPrefix = zipFilePath + "!/";
+            final var zipFilePathPrefix = zipFilePath + "!/";
             // Class-Path is split on " ", but Bundle-ClassPath is split on ","
             for (String childBundlePath : logicalZipFile.bundleClassPathManifestEntryValue.split(",")) {
                 // Assume that Bundle-ClassPath paths have to be given relative to jarfile root
                 while (childBundlePath.startsWith("/")) {
                     childBundlePath = childBundlePath.substring(1);
                 }
-                // Currently the position of "." relative to child classpath entries is ignored (the
-                // Bundle-ClassPath path is treated as if "." is in the first position, since child
-                // classpath entries are always added to the classpath after the parent classpath
+                // Currently the position of "." relative to child classpath entries is ignored
+                // (the
+                // Bundle-ClassPath path is treated as if "." is in the first position, since
+                // child
+                // classpath entries are always added to the classpath after the parent
+                // classpath
                 // entry that they were obtained from).
-                if (!childBundlePath.isEmpty() && !childBundlePath.equals(".")) {
+                if (!childBundlePath.isEmpty() && !".".equals(childBundlePath)) {
                     // Resolve Bundle-ClassPath entry within jar
-                    final String childClassPathEltPath = zipFilePathPrefix + FileUtils.sanitizeEntryPath(
-                            childBundlePath, /* removeInitialSlash = */ true, /* removeFinalSlash = */ true);
+                    final var childClassPathEltPath = zipFilePathPrefix + FileUtils.sanitizeEntryPath(childBundlePath,
+                            /* removeInitialSlash = */ true, /* removeFinalSlash = */ true);
                     // Only add child classpath elements once
                     if (scheduledChildClasspathElements.add(childClassPathEltPath)) {
                         // Schedule child classpath element for scanning
-                        workQueue.addWorkUnit(new ClasspathEntryWorkUnit(childClassPathEltPath, getClassLoader(),
-                                /* parentClasspathElement = */ this,
-                                /* orderWithinParentClasspathElement = */
-                                childClasspathEntryIdx++, /* packageRootPrefix = */ "", packageRootPrefixes));
+                        workQueue.addWorkUnit(
+                                new ClasspathEntryWorkUnit(childClassPathEltPath, getClassLoader(), /*
+                                                                                                     * parentClasspathElement
+                                                                                                     * =
+                                                                                                     */ this,
+                                        /* orderWithinParentClasspathElement = */
+                                        childClasspathEntryIdx++, /* packageRootPrefix = */ "", packageRootPrefixes));
                     }
                 }
             }
@@ -295,12 +320,11 @@ class ClasspathElementZip extends ClasspathElement {
     }
 
     /**
-     * Create a new {@link Resource} object for a resource or classfile discovered while scanning paths.
+     * Create a new {@link Resource} object for a resource or classfile discovered
+     * while scanning paths.
      *
-     * @param zipEntry
-     *            the zip entry
-     * @param pathRelativeToPackageRoot
-     *            the path relative to package root
+     * @param zipEntry                  the zip entry
+     * @param pathRelativeToPackageRoot the path relative to package root
      * @return the resource
      */
     private Resource newResource(final FastZipEntry zipEntry, final String pathRelativeToPackageRoot) {
@@ -309,8 +333,8 @@ class ClasspathElementZip extends ClasspathElement {
             private final AtomicBoolean isOpen = new AtomicBoolean();
 
             /**
-             * Path with package root prefix and/or any Spring Boot prefix ("BOOT-INF/classes/" or
-             * "WEB-INF/classes/") removed.
+             * Path with package root prefix and/or any Spring Boot prefix
+             * ("BOOT-INF/classes/" or "WEB-INF/classes/") removed.
              */
             @Override
             public String getPath() {
@@ -333,8 +357,8 @@ class ClasspathElementZip extends ClasspathElement {
 
             @Override
             public Set<PosixFilePermission> getPosixFilePermissions() {
-                final int fileAttributes = zipEntry.fileAttributes;
-                Set<PosixFilePermission> perms;
+                final var fileAttributes = zipEntry.fileAttributes;
+                final Set<PosixFilePermission> perms;
                 if (fileAttributes == 0) {
                     perms = null;
                 } else {
@@ -420,7 +444,7 @@ class ClasspathElementZip extends ClasspathElement {
             public byte[] load() throws IOException {
                 checkCanOpen();
                 try (Resource res = this) { // Close this after use
-                    final byte[] byteArray = zipEntry.getSlice().load();
+                    final var byteArray = zipEntry.getSlice().load();
                     res.length = byteArray.length;
                     return byteArray;
                 }
@@ -430,7 +454,8 @@ class ClasspathElementZip extends ClasspathElement {
             public void close() {
                 if (isOpen.getAndSet(false)) {
                     if (byteBuffer != null) {
-                        // ByteBuffer should be a duplicate or slice, or should wrap an array, so it doesn't
+                        // ByteBuffer should be a duplicate or slice, or should wrap an array, so it
+                        // doesn't
                         // need to be unmapped
                         byteBuffer = null;
                     }
@@ -445,10 +470,9 @@ class ClasspathElementZip extends ClasspathElement {
     /**
      * Get the {@link Resource} for a given relative path.
      *
-     * @param relativePath
-     *            The relative path of the {@link Resource} to return.
-     * @return The {@link Resource} for the given relative path, or null if relativePath does not exist in this
-     *         classpath element.
+     * @param relativePath The relative path of the {@link Resource} to return.
+     * @return The {@link Resource} for the given relative path, or null if
+     *         relativePath does not exist in this classpath element.
      */
     @Override
     Resource getResource(final String relativePath) {
@@ -456,26 +480,26 @@ class ClasspathElementZip extends ClasspathElement {
     }
 
     /**
-     * Filter out any candidate package root prefix that is really a package with the same name as the prefix, e.g.
-     * a package named {@code classes} in a jar that has no {@code classes/} package root (#929).
+     * Filter out any candidate package root prefix that is really a package with
+     * the same name as the prefix, e.g. a package named {@code classes} in a jar
+     * that has no {@code classes/} package root (#929).
      *
-     * @param log
-     *            the log
+     * @param log the log
      * @return the package root prefixes that were not disproved
      */
     private String[] getVerifiedPackageRootPrefixes(final LogNode log) {
         // Find the first classfile beneath each candidate package root prefix
-        final FastZipEntry[] firstClassfileEntry = new FastZipEntry[packageRootPrefixes.length];
+        final var firstClassfileEntry = new FastZipEntry[packageRootPrefixes.length];
         for (final FastZipEntry zipEntry : logicalZipFile.entries) {
-            final String entryName = zipEntry.entryNameUnversioned;
+            final var entryName = zipEntry.entryNameUnversioned;
             if (!entryName.endsWith(".class")) {
                 continue;
             }
-            for (int i = 0; i < packageRootPrefixes.length; i++) {
-                final String prefix = packageRootPrefixes[i];
+            for (var i = 0; i < packageRootPrefixes.length; i++) {
+                final var prefix = packageRootPrefixes[i];
                 if (firstClassfileEntry[i] == null && entryName.startsWith(prefix)
-                        // The path of a classfile below META-INF (e.g. in a multi-release jar) does not
-                        // necessarily correspond to the name of the class it declares
+                // The path of a classfile below META-INF (e.g. in a multi-release jar) does not
+                // necessarily correspond to the name of the class it declares
                         && !entryName.startsWith("META-INF/", prefix.length())) {
                     firstClassfileEntry[i] = zipEntry;
                 }
@@ -483,17 +507,18 @@ class ClasspathElementZip extends ClasspathElement {
         }
         // Check the class declared by each of those classfiles against its path
         final List<String> verifiedPackageRootPrefixes = new ArrayList<>(packageRootPrefixes.length);
-        for (int i = 0; i < packageRootPrefixes.length; i++) {
-            final String prefix = packageRootPrefixes[i];
-            final FastZipEntry zipEntry = firstClassfileEntry[i];
+        for (var i = 0; i < packageRootPrefixes.length; i++) {
+            final var prefix = packageRootPrefixes[i];
+            final var zipEntry = firstClassfileEntry[i];
             String disprovingClassName = null;
             if (zipEntry != null) {
-                try (ClassfileReader classfileReader = new ClassfileReader(zipEntry.getSlice(),
+                try (var classfileReader = new ClassfileReader(zipEntry.getSlice(),
                         /* resourceToClose = */ null)) {
                     disprovingClassName = getClassNameDisprovingPackageRoot(classfileReader,
                             zipEntry.entryNameUnversioned.substring(prefix.length()));
                 } catch (final IOException e) {
-                    // If the classfile cannot be read, give the candidate package root the benefit of the doubt
+                    // If the classfile cannot be read, give the candidate package root the benefit
+                    // of the doubt
                 }
             }
             if (disprovingClassName == null) {
@@ -507,10 +532,10 @@ class ClasspathElementZip extends ClasspathElement {
     }
 
     /**
-     * Scan for path matches within jarfile, and record ZipEntry objects of matching files.
+     * Scan for path matches within jarfile, and record ZipEntry objects of matching
+     * files.
      *
-     * @param log
-     *            the log
+     * @param log the log
      */
     @Override
     void scanPaths(final LogNode log) {
@@ -528,19 +553,21 @@ class ClasspathElementZip extends ClasspathElement {
             throw new IllegalArgumentException("Already scanned classpath element " + getZipFilePath());
         }
 
-        final LogNode subLog = log == null ? null
+        final var subLog = log == null ? null
                 : log(classpathElementIdx, "Scanning jarfile classpath element " + getZipFilePath(), log);
 
         // Determine whether this is a modular jar
-        String moduleName = moduleNameFromModuleDescriptor;
+        var moduleName = moduleNameFromModuleDescriptor;
         if (moduleName == null || moduleName.isEmpty()) {
             moduleName = moduleNameFromManifestFile;
         }
-        final boolean isModularJar = moduleName != null && !moduleName.isEmpty();
+        final var isModularJar = moduleName != null && !moduleName.isEmpty();
 
-        // "classes/" and "test-classes/" are legal package names, so only strip a package root prefix from the
-        // relative path of an entry if the prefix is not simply a package with the same name (#929)
-        final String[] verifiedPackageRootPrefixes = packageRootPrefix.isEmpty() && packageRootPrefixes.length > 0
+        // "classes/" and "test-classes/" are legal package names, so only strip a
+        // package root prefix from the
+        // relative path of an entry if the prefix is not simply a package with the same
+        // name (#929)
+        final var verifiedPackageRootPrefixes = packageRootPrefix.isEmpty() && packageRootPrefixes.length > 0
                 ? getVerifiedPackageRootPrefixes(subLog)
                 : packageRootPrefixes;
 
@@ -548,12 +575,16 @@ class ClasspathElementZip extends ClasspathElement {
         String prevParentRelativePath = null;
         ScanSpecPathMatch prevParentMatchStatus = null;
         for (final FastZipEntry zipEntry : logicalZipFile.entries) {
-            String relativePath = zipEntry.entryNameUnversioned;
+            var relativePath = zipEntry.entryNameUnversioned;
 
-            // Paths should never start with "META-INF/versions/{version}/", because either this is a versioned
-            // jar, in which case zipEntry.entryNameUnversioned has the version prefix stripped, or this is an
-            // unversioned jar (e.g. the multi-version flag is not set in the manifest file) and there are some
-            // spurious files in a multi-version path (in which case, they should be ignored).
+            // Paths should never start with "META-INF/versions/{version}/", because either
+            // this is a versioned
+            // jar, in which case zipEntry.entryNameUnversioned has the version prefix
+            // stripped, or this is an
+            // unversioned jar (e.g. the multi-version flag is not set in the manifest file)
+            // and there are some
+            // spurious files in a multi-version path (in which case, they should be
+            // ignored).
             if (!scanSpec.enableMultiReleaseVersions
                     && relativePath.startsWith(LogicalZipFile.MULTI_RELEASE_PATH_PREFIX)) {
                 if (subLog != null) {
@@ -563,17 +594,19 @@ class ClasspathElementZip extends ClasspathElement {
                 continue;
             }
 
-            // If this is a modular jar, ignore all classfiles other than "module-info.class" in the
+            // If this is a modular jar, ignore all classfiles other than
+            // "module-info.class" in the
             // default package, since these are disallowed.
             if (isModularJar && relativePath.indexOf('/') < 0 && relativePath.endsWith(".class")
-                    && !relativePath.equals("module-info.class")) {
+                    && !"module-info.class".equals(relativePath)) {
                 continue;
             }
 
             // Check if the relative path is within a nested classpath root
             if (nestedClasspathRootPrefixes != null) {
-                // This is O(mn), which is inefficient, but the number of nested classpath roots should be small
-                boolean reachedNestedRoot = false;
+                // This is O(mn), which is inefficient, but the number of nested classpath roots
+                // should be small
+                var reachedNestedRoot = false;
                 for (final String nestedClasspathRoot : nestedClasspathRootPrefixes) {
                     if (relativePath.startsWith(nestedClasspathRoot)) {
                         // relativePath has a prefix of nestedClasspathRoot
@@ -610,7 +643,7 @@ class ClasspathElementZip extends ClasspathElement {
                         // Strip package root
                         relativePath = relativePath.substring(packageRoot.length());
                         // Strip final slash from package root
-                        final String packageRootWithoutFinalSlash = packageRoot.endsWith("/")
+                        final var packageRootWithoutFinalSlash = packageRoot.endsWith("/")
                                 ? packageRoot.substring(0, packageRoot.length() - 1)
                                 : packageRoot;
                         // Store package root for use by getAllURIs()
@@ -626,12 +659,13 @@ class ClasspathElementZip extends ClasspathElement {
                 continue;
             }
 
-            // Get match status of the parent directory of this ZipEntry file's relative path (or reuse the last
+            // Get match status of the parent directory of this ZipEntry file's relative
+            // path (or reuse the last
             // match status for speed, if the directory name hasn't changed).
-            final int lastSlashIdx = relativePath.lastIndexOf('/');
-            final String parentRelativePath = lastSlashIdx < 0 ? "/" : relativePath.substring(0, lastSlashIdx + 1);
-            final boolean parentRelativePathChanged = !parentRelativePath.equals(prevParentRelativePath);
-            final ScanSpecPathMatch parentMatchStatus = //
+            final var lastSlashIdx = relativePath.lastIndexOf('/');
+            final var parentRelativePath = lastSlashIdx < 0 ? "/" : relativePath.substring(0, lastSlashIdx + 1);
+            final var parentRelativePathChanged = !parentRelativePath.equals(prevParentRelativePath);
+            final var parentMatchStatus = //
                     parentRelativePathChanged ? scanSpec.dirAcceptMatchStatus(parentRelativePath)
                             : prevParentMatchStatus;
             prevParentRelativePath = parentRelativePath;
@@ -646,7 +680,7 @@ class ClasspathElementZip extends ClasspathElement {
             }
 
             // Add the ZipEntry path as a Resource
-            final Resource resource = newResource(zipEntry, relativePath);
+            final var resource = newResource(zipEntry, relativePath);
             if (relativePathToResource.putIfAbsent(relativePath, resource) == null) {
                 // If resource is accepted
                 if (parentMatchStatus == ScanSpecPathMatch.HAS_ACCEPTED_PATH_PREFIX
@@ -655,8 +689,9 @@ class ClasspathElementZip extends ClasspathElement {
                                 && scanSpec.classfileIsSpecificallyAccepted(relativePath))) {
                     // Resource is accepted
                     addAcceptedResource(resource, parentMatchStatus, /* isClassfileOnly = */ false, subLog);
-                } else if (scanSpec.enableClassInfo && relativePath.equals("module-info.class")) {
-                    // Add module descriptor as an accepted classfile resource, so that it is scanned,
+                } else if (scanSpec.enableClassInfo && "module-info.class".equals(relativePath)) {
+                    // Add module descriptor as an accepted classfile resource, so that it is
+                    // scanned,
                     // but don't add it to the list of resources in the ScanResult, since it is not
                     // in an accepted package (#352)
                     addAcceptedResource(resource, parentMatchStatus, /* isClassfileOnly = */ true, subLog);
@@ -665,7 +700,7 @@ class ClasspathElementZip extends ClasspathElement {
         }
 
         // Save the last modified time for the zipfile
-        final File zipfile = getFile();
+        final var zipfile = getFile();
         if (zipfile != null) {
             fileToLastModified.put(zipfile, zipfile.lastModified());
         }
@@ -674,14 +709,14 @@ class ClasspathElementZip extends ClasspathElement {
     }
 
     /**
-     * Get module name from module descriptor, or get the automatic module name from the manifest file, or derive an
-     * automatic module name from the jar name.
+     * Get module name from module descriptor, or get the automatic module name from
+     * the manifest file, or derive an automatic module name from the jar name.
      *
      * @return the module name
      */
     @Override
     public String getModuleName() {
-        String moduleName = moduleNameFromModuleDescriptor;
+        var moduleName = moduleNameFromModuleDescriptor;
         if (moduleName == null || moduleName.isEmpty()) {
             moduleName = moduleNameFromManifestFile;
         }
@@ -704,7 +739,9 @@ class ClasspathElementZip extends ClasspathElement {
                 : zipFilePath + "!/" + packageRootPrefix.substring(0, packageRootPrefix.length() - 1);
     }
 
-    /* (non-Javadoc)
+    /*
+     * (non-Javadoc)
+     *
      * @see io.github.classgraph.ClasspathElement#getURI()
      */
     @Override
@@ -717,18 +754,18 @@ class ClasspathElementZip extends ClasspathElement {
     }
 
     /**
-     * Return URI for classpath element, plus URIs for any stripped nested automatic package root prefixes, e.g.
-     * "!/BOOT-INF/classes".
+     * Return URI for classpath element, plus URIs for any stripped nested automatic
+     * package root prefixes, e.g. "!/BOOT-INF/classes".
      */
     @Override
     List<URI> getAllURIs() {
         if (strippedAutomaticPackageRootPrefixes.isEmpty()) {
-            return Collections.singletonList(getURI());
+            return List.of(getURI());
         } else {
-            final URI uri = getURI();
+            final var uri = getURI();
             final List<URI> uris = new ArrayList<>();
             uris.add(uri);
-            final String uriStr = uri.toString();
+            final var uriStr = uri.toString();
             for (final String prefix : strippedAutomaticPackageRootPrefixes) {
                 try {
                     uris.add(new URI(uriStr + "!/" + prefix));
@@ -743,18 +780,20 @@ class ClasspathElementZip extends ClasspathElement {
     /**
      * Get the {@link File} for the outermost zipfile of this classpath element.
      *
-     * @return The {@link File} for the outermost zipfile of this classpath element, or null if this file was
-     *         downloaded from a URL directly to RAM, or if the classpath element was backed by a custom filesystem
-     *         that supports the {@link Path} API put not the {@link File} API.
+     * @return The {@link File} for the outermost zipfile of this classpath element,
+     *         or null if this file was downloaded from a URL directly to RAM, or if
+     *         the classpath element was backed by a custom filesystem that supports
+     *         the {@link Path} API put not the {@link File} API.
      */
     @Override
     File getFile() {
         if (logicalZipFile != null) {
             return logicalZipFile.getPhysicalFile();
         } else {
-            // Not performing a full scan (only getting classpath elements), so logicalZipFile is not set
-            final int plingIdx = JarUtils.indexOfNestedJarSeparator(rawPath);
-            final String outermostZipFilePathResolved = FastPathResolver.resolve(FileUtils.currDirPath(),
+            // Not performing a full scan (only getting classpath elements), so
+            // logicalZipFile is not set
+            final var plingIdx = JarUtils.indexOfNestedJarSeparator(rawPath);
+            final var outermostZipFilePathResolved = FastPathResolver.resolve(FileUtils.currDirPath(),
                     plingIdx < 0 ? rawPath : rawPath.substring(0, plingIdx));
             return new File(outermostZipFilePathResolved);
         }
@@ -770,21 +809,25 @@ class ClasspathElementZip extends ClasspathElement {
         return getZipFilePath();
     }
 
-    /* (non-Javadoc)
+    /*
+     * (non-Javadoc)
+     *
      * @see java.lang.Object#equals(java.lang.Object)
      */
     @Override
     public boolean equals(final Object obj) {
         if (obj == this) {
             return true;
-        } else if (!(obj instanceof ClasspathElementZip)) {
+        }
+        if (!(obj instanceof final ClasspathElementZip other)) {
             return false;
         }
-        final ClasspathElementZip other = (ClasspathElementZip) obj;
         return this.getZipFilePath().equals(other.getZipFilePath());
     }
 
-    /* (non-Javadoc)
+    /*
+     * (non-Javadoc)
+     *
      * @see java.lang.Object#hashCode()
      */
     @Override
