@@ -8,7 +8,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -16,7 +15,6 @@ import io.github.classgraph.ClassGraph;
 import io.github.classgraph.ClassInfo;
 import io.github.classgraph.FieldInfo;
 import io.github.classgraph.MethodInfo;
-import io.github.classgraph.ScanResult;
 
 /**
  * Test.
@@ -75,34 +73,30 @@ public class DeclaredVsNonDeclaredTest {
     /**
      * Compare results.
      *
-     * @param superClassInfo
-     *            the superclass info
-     * @param subClassInfo
-     *            the subclass info
-     * @param ignoreVisibility
-     *            whether or not to ignore method and field visibility
+     * @param superClassInfo   the superclass info
+     * @param subClassInfo     the subclass info
+     * @param ignoreVisibility whether or not to ignore method and field visibility
      */
     private void compareResults(final ClassInfo superClassInfo, final ClassInfo subClassInfo,
             final boolean ignoreVisibility) {
-        final Predicate<String> filterOutClassMethods = name -> !name.equals("wait") && !name.equals("equals")
-                && !name.equals("toString") && !name.equals("hashCode") && !name.equals("getClass")
-                && !name.equals("notify") && !name.equals("notifyAll");
+        final Predicate<String> filterOutClassMethods = name -> !"wait".equals(name) && !"equals".equals(name)
+                && !"toString".equals(name) && !"hashCode".equals(name) && !"getClass".equals(name)
+                && !"notify".equals(name) && !"notifyAll".equals(name);
 
         // METHODS
 
         final Function<ClassInfo, List<String>> getClassGraphMethodNames = classInfo -> classInfo.getMethodInfo()
-                .stream().map(MethodInfo::getName).collect(Collectors.toList());
+                .stream().map(MethodInfo::getName).toList();
 
         final Function<ClassInfo, List<String>> getClassGraphDeclaredMethodNames = classInfo -> classInfo
-                .getDeclaredMethodInfo().stream().map(MethodInfo::getName).collect(Collectors.toList());
+                .getDeclaredMethodInfo().stream().map(MethodInfo::getName).toList();
 
         final Function<Class<?>, String[]> getClassMethodNames = clazz -> Arrays.stream(clazz.getMethods())
-                .map(Method::getName).filter(filterOutClassMethods).collect(Collectors.toList())
-                .toArray(new String[0]);
+                .map(Method::getName).filter(filterOutClassMethods).toArray(String[]::new);
 
         final Function<Class<?>, String[]> getClassDeclaredMethodNames = clazz -> Arrays
                 .stream(clazz.getDeclaredMethods()).map(Method::getName).filter(filterOutClassMethods)
-                .collect(Collectors.toList()).toArray(new String[0]);
+                .toArray(String[]::new);
 
         // Non-"declared" methods, superclass
 
@@ -113,10 +107,11 @@ public class DeclaredVsNonDeclaredTest {
 
         // Non-"declared" methods, subclass
 
-        assertThat(getClassGraphMethodNames.apply(subClassInfo)).containsExactlyInAnyOrder(ignoreVisibility
-                ? new String[] { "publicSuperClassMethod", "publicSubClassMethod", "privateSuperClassMethod",
-                        "privateSubClassMethod" }
-                : new String[] { "publicSuperClassMethod", "publicSubClassMethod" });
+        assertThat(getClassGraphMethodNames.apply(subClassInfo))
+                .containsExactlyInAnyOrder(ignoreVisibility
+                        ? new String[] { "publicSuperClassMethod", "publicSubClassMethod", "privateSuperClassMethod",
+                                "privateSubClassMethod" }
+                        : new String[] { "publicSuperClassMethod", "publicSubClassMethod" });
         assertThat(getClassMethodNames.apply(SubClass.class)).containsExactlyInAnyOrder("publicSuperClassMethod",
                 "publicSubClassMethod");
 
@@ -133,23 +128,22 @@ public class DeclaredVsNonDeclaredTest {
         assertThat(getClassGraphDeclaredMethodNames.apply(subClassInfo)).containsExactlyInAnyOrder(
                 ignoreVisibility ? new String[] { "publicSubClassMethod", "privateSubClassMethod" }
                         : new String[] { "publicSubClassMethod" });
-        assertThat(getClassDeclaredMethodNames.apply(SubClass.class))
-                .containsExactlyInAnyOrder("publicSubClassMethod", "privateSubClassMethod");
+        assertThat(getClassDeclaredMethodNames.apply(SubClass.class)).containsExactlyInAnyOrder("publicSubClassMethod",
+                "privateSubClassMethod");
 
         // FIELDS
 
-        final Function<ClassInfo, List<String>> getClassGraphFieldNames = classInfo -> classInfo.getFieldInfo()
-                .stream().map(FieldInfo::getName).collect(Collectors.toList());
+        final Function<ClassInfo, List<String>> getClassGraphFieldNames = classInfo -> classInfo.getFieldInfo().stream()
+                .map(FieldInfo::getName).toList();
 
         final Function<ClassInfo, List<String>> getClassGraphDeclaredFieldNames = classInfo -> classInfo
-                .getDeclaredFieldInfo().stream().map(FieldInfo::getName).collect(Collectors.toList());
+                .getDeclaredFieldInfo().stream().map(FieldInfo::getName).toList();
 
         final Function<Class<?>, List<String>> getClassFieldNames = clazz -> Arrays.stream(clazz.getFields())
-                .map(Field::getName).filter(filterOutClassMethods).collect(Collectors.toList());
+                .map(Field::getName).filter(filterOutClassMethods).toList();
 
         final Function<Class<?>, List<String>> getClassDeclaredFieldNames = clazz -> Arrays
-                .stream(clazz.getDeclaredFields()).map(Field::getName).filter(filterOutClassMethods)
-                .collect(Collectors.toList());
+                .stream(clazz.getDeclaredFields()).map(Field::getName).filter(filterOutClassMethods).toList();
 
         // Non-"declared" fields, superclass
 
@@ -181,38 +175,42 @@ public class DeclaredVsNonDeclaredTest {
         assertThat(getClassGraphDeclaredFieldNames.apply(subClassInfo)).containsExactlyInAnyOrder(
                 ignoreVisibility ? new String[] { "publicSubClassField", "privateSubClassField" }
                         : new String[] { "publicSubClassField" });
-        assertThat(getClassDeclaredFieldNames.apply(SubClass.class))
-                .containsExactlyInAnyOrder("publicSubClassField", "privateSubClassField");
+        assertThat(getClassDeclaredFieldNames.apply(SubClass.class)).containsExactlyInAnyOrder("publicSubClassField",
+                "privateSubClassField");
     }
 
     /**
-     * Test ClassGraph's "declared" vs. non-"declared" method/field retrieval against the Java reflection API,
-     * without calling {@link ClassGraph#ignoreMethodVisibility()} or {@link ClassGraph#ignoreFieldVisibility()}.
+     * Test ClassGraph's "declared" vs. non-"declared" method/field retrieval
+     * against the Java reflection API, without calling
+     * {@link ClassGraph#ignoreMethodVisibility()} or
+     * {@link ClassGraph#ignoreFieldVisibility()}.
      */
     @Test
     public void publicDeclaredVsNonDeclared() {
-        try (ScanResult scanResult = new ClassGraph().enableClassInfo() //
+        try (var scanResult = new ClassGraph().enableClassInfo() //
                 .enableMethodInfo() //
                 .enableFieldInfo() //
                 .acceptPackages(DeclaredVsNonDeclaredTest.class.getPackage().getName()).scan()) {
-            final ClassInfo superClassInfo = scanResult.getClassInfo(SuperClass.class.getName());
-            final ClassInfo subClassInfo = scanResult.getClassInfo(SubClass.class.getName());
+            final var superClassInfo = scanResult.getClassInfo(SuperClass.class.getName());
+            final var subClassInfo = scanResult.getClassInfo(SubClass.class.getName());
             compareResults(superClassInfo, subClassInfo, /* ignoreVisibility = */ false);
         }
     }
 
     /**
-     * Test ClassGraph's "declared" vs. non-"declared" method/field retrieval against the Java reflection API,
-     * without calling {@link ClassGraph#ignoreMethodVisibility()} or {@link ClassGraph#ignoreFieldVisibility()}.
+     * Test ClassGraph's "declared" vs. non-"declared" method/field retrieval
+     * against the Java reflection API, without calling
+     * {@link ClassGraph#ignoreMethodVisibility()} or
+     * {@link ClassGraph#ignoreFieldVisibility()}.
      */
     @Test
     public void publicAndPrivateDeclaredVsNonDeclared() {
-        try (ScanResult scanResult = new ClassGraph().enableClassInfo() //
+        try (var scanResult = new ClassGraph().enableClassInfo() //
                 .enableMethodInfo().ignoreMethodVisibility() //
                 .enableFieldInfo().ignoreFieldVisibility() //
                 .acceptPackages(DeclaredVsNonDeclaredTest.class.getPackage().getName()).scan()) {
-            final ClassInfo superClassInfo = scanResult.getClassInfo(SuperClass.class.getName());
-            final ClassInfo subClassInfo = scanResult.getClassInfo(SubClass.class.getName());
+            final var superClassInfo = scanResult.getClassInfo(SuperClass.class.getName());
+            final var subClassInfo = scanResult.getClassInfo(SubClass.class.getName());
             compareResults(superClassInfo, subClassInfo, /* ignoreVisibility = */ true);
         }
     }
